# DynamicDispatch

./: .clang-format  .gitattributes  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  README.md  build.bat  env.yml  run_tests.bat  setup.bat  setup.ps1  setup.sh
src/: CMakeLists.txt
src/fusion_rt/: fusion_rt.cpp  md5.cpp  md5.h  meta_utils.cpp  metastate.proto  metastate_api.cpp  metastate_api.hpp  weak.hpp
src/ops/: op_builder.cpp  op_interface.cpp  op_registration_db.def
src/ops/AddTanhLPNorm/: AddTanhLPNorm.cpp
src/ops/AttentionMaskPrePro/: AttentionMaskPrePro.cpp
src/ops/DotProductSigmoid/: DotProductSigmoid.cpp
src/ops/ReduceSum/: ReduceSum.cpp
src/ops/act_act_matmul_qdq/: act_act_matmul_qdq.cpp
src/ops/act_const_add/: act_const_add.cpp
src/ops/act_matmul_softmax/: act_matmul_softmax.cpp
src/ops/bmm/: bmm.cpp
src/ops/cast/: cast.cpp
src/ops/concat/: concat.cpp
src/ops/concateOps/: concateOps.cpp
src/ops/conv/: conv.cpp  conv_lp.cpp
src/ops/conv2matmul/: conv2matmul.cpp
src/ops/conv2matmul_silu/: conv2matmul_silu.cpp
src/ops/convForMatmulAdd/: convForMatmulAdd.cpp
src/ops/dequant/: dequant.cpp
src/ops/dequantizelinear_cpu/: dequantizelinear_cpu.cpp
src/ops/elwadd/: elwadd.cpp
src/ops/elwdiv_qdq/: elwdiv_qdq.cpp
src/ops/elwmul/: elwmul.cpp
src/ops/elwmul_qdq/: elwmul_qdq.cpp
src/ops/expand/: expand.cpp
src/ops/experimental/: cube.cpp  elwadd_tile.cpp  matmul_tile.cpp  square.cpp
src/ops/flat/: mha_v2.cpp  mlp.cpp  rms_add.cpp
src/ops/gap/: gap.cpp  gap_lp.cpp
src/ops/gelu/: gelu.cpp
src/ops/gelu_e/: gelue.cpp
src/ops/groupnorm/: groupnorm.cpp
src/ops/iconv/: iconv.cpp
src/ops/identity/: identity.cpp
src/ops/l2_norm/: l2_norm.cpp
src/ops/layernorm/: layernorm.cpp
src/ops/lstm/: lstm.cpp  lstm_util.hpp
src/ops/maskedsoftmax/: maskedsoftmax.cpp
src/ops/matmul/: matmul.cpp
src/ops/matmul_a16a16_mladf/: matmul_a16a16_mladf.cpp
src/ops/matmul_a16w8_mladf/: matmul_a16w8_mladf.cpp
src/ops/matmul_cpu/: matmul_cpu.cpp
src/ops/matmulbias/: matmulbias.cpp
src/ops/matmulgeluadd/: matmulgeluadd.cpp
src/ops/matvecadd/: matvecadd.cpp
src/ops/maxpool/: maxpool.cpp
src/ops/mha/: mha.cpp
src/ops/mhachannel/: mhachannel.cpp
src/ops/mhagprb/: mhagprb.cpp
src/ops/mhamzdk5/: mhamzdk5.cpp
src/ops/mhawindow/: mhawindow.cpp
src/ops/mladfadd/: mladfadd.cpp
src/ops/mladfelwadd/: mladfelwadd.cpp
src/ops/mladfelwmul/: mladfelwmul.cpp
src/ops/mladfmatmulbias/: mladfmatmulbias.cpp
src/ops/mladfmharope/: mladfmharope.cpp
src/ops/mladfrmsnorm/: mladfrmsnorm.cpp
src/ops/mladfsoftmax/: mladfsoftmax.cpp
src/ops/nni_resize/: nni_resize.cpp
src/ops/ops_common/: a16w8_matrix.hpp  coeffs.cpp  coeffs.hpp  ctrlpkt.hpp  dtype_utils.h  gelu_lut_512.h  gelu_lut_bf16_512.h  gprb_validation.cpp  help_file.hpp  iconv_matrix.hpp  kernel_structs.hpp  lrn_matrix.hpp  lrn_util.cpp  lrn_util.h  matmul_a16a16_mladf_matrix.hpp  matmul_a16w8_mladf_matrix.hpp  matmul_matrix.hpp  matmulgelu_matrix.hpp  matmulnbits_pack_const.hpp  matrix_formatting.h  mha_validation.cpp  mhagprb_matrix.hpp  mladf_matmul_matrix.hpp  nni_resize_matrix.hpp  op_util.hpp  psu_silu_lut_bf16_512.h  sfmx_util.cpp  sfmx_util.h  sigmoid_lut_512.h  silu_lut_bf16_512.h  weight_bias_f2bfp.hpp
src/ops/pm_load/: pm_load.cpp
src/ops/preemption/: preemption.cpp
src/ops/quant/: quant.cpp
src/ops/quantizelinear_cpu/: quantizelinear_cpu.cpp
src/ops/record_timer/: record_timer.cpp
src/ops/sd/: concat.cpp  conv2d.cpp  elwadd.cpp  elwmul.cpp  gelu.cpp  gemm.cpp  groupnorm.cpp  layernorm.cpp  matmul.cpp  mha.cpp  resize.cpp  sd_helper.hpp  silu.cpp  slice.cpp  wts_packing.hpp
src/ops/sigmoid/: sigmoid.cpp
src/ops/silu/: silu.cpp
src/ops/silu_qdq/: silu_qdq.cpp
src/ops/slice/: slice.cpp
src/ops/softmax_qdq/: softmax_qdq.cpp
src/ops/transpose/: transpose.cpp
src/ops/unary/: unary.cpp
src/passes/: analyze_buffer_reqs.cpp  assign_pdi_id_pass.cpp  cont_reuse.cpp  cont_reuse.hpp  fetch_op_txn_bins.cpp  generate_pdi_partitions_pass.cpp  insert_pm_swap.cpp  insert_preemption_pass.cpp  insert_record_timer.cpp  optimize_scratch.cpp  optimize_scratch_bucket.cpp  optimize_scratch_contiguous.cpp  passes.hpp  relocate_ctrl_pkt_patch_info.cpp  remove_identity_ops.cpp  split_max_partition_pass.cpp  sync_identity_tensors.cpp
src/passes/detail/: adjacency_graph.hpp  graph_color.hpp  meta_graph.hpp
src/python/: bindings.cpp
src/python/ryzenai_dynamic_dispatch/: __init__.py  fuse.py  onnx_graph.py  tune_graph.py
src/txn/: txn_utils.cpp  txn_utils.hpp
src/txn_helper/: txn_helper.cpp  txn_helper.hpp  txn_tiling_util.cpp  txn_tiling_util.hpp
src/utils/: ctrl_pkt_utils.cpp  ctrl_pkt_utils.hpp  dpu_mdata.hpp  instruction_cache.cpp  instruction_registry.cpp  ipu_hw_config.hpp  logging.cpp  meta_utils.hpp  op_utils.cpp  op_utils.hpp  pass_utils.cpp  pass_utils.hpp  platform.cpp  tmpfile.cpp  utils.cpp  xrt_context.cpp
tests/cpp/: CMakeLists.txt  test-dd_runner.json  test.json
tests/cpp/cast/: CMakeLists.txt  model.py  test_fusion.cpp
tests/cpp/dequantizelinear_cpu/: CMakeLists.txt  model.py  test_fusion.cpp
tests/cpp/elwmul/: CMakeLists.txt  model.py  test_fusion.cpp
tests/cpp/elwmul_tile/: CMakeLists.txt  model.py  test_fusion.cpp
tests/cpp/flat_mha_v2/: CMakeLists.txt  model.py  test_fusion.cpp
tests/cpp/flat_mlp/: CMakeLists.txt  model.py  test_fusion.cpp
tests/cpp/flat_rms_add/: CMakeLists.txt  model.py  test_fusion.cpp
tests/cpp/gelu/: CMakeLists.txt  model.py  test_fusion.cpp
tests/cpp/identity/: CMakeLists.txt  model_identity.py  test_fusion.cpp
tests/cpp/include/: bmm_helpers.hpp  maskedsoftmax_helpers.hpp  mladfelwadd_helpers.hpp  mladfelwmul_helpers.hpp  mladfmatmulbias_helpers.hpp  mladfsilu_helpers.hpp  mladfsoftmax_helpers.hpp  test_common.hpp
tests/cpp/l2_norm/: CMakeLists.txt  model.py  test_fusion.cpp
tests/cpp/maskedsoftmax/: CMakeLists.txt  model.py  test_fusion.cpp
tests/cpp/matmul6/: model.py  (+2 more)
transaction/: CMakeLists.txt
transaction/include/: txn_container.hpp
transaction/src/: txn_container.cpp
(+679 files in other folders)
